--- a/build-context/Dockerfile
+++ b/build-context/Dockerfile
@@ -9,7 +9,7 @@ ARG CPU=4
 ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update \
     && apt-get dist-upgrade -y \
-    && apt-get install -y ca-certificates cmake libncurses5-dev libncursesw5-dev gcc g++ perl wget git libssl-dev pkg-config \
+    && apt-get install -y apt-utils ca-certificates cmake libncurses5-dev libncursesw5-dev gcc g++ perl wget git libssl-dev pkg-config \
     && rm -rf /var/lib/apt/lists/* \
     && cd /opt \
     && wget -q https://dev.mysql.com/get/Downloads/MySQL-${MYSQLMJR}/mysql-${MYSQLMJR}.${MYSQLMNR}.tar.gz -O /opt/mysql.tar.gz \
@@ -17,7 +17,7 @@ RUN apt-get update \
     && rm /opt/mysql.tar.gz \
     && mkdir -p /opt/mysql-${MYSQLMJR}.${MYSQLMNR}/bld \
     && cd /opt/mysql-${MYSQLMJR}.${MYSQLMNR}/bld \
-    && cmake .. -DMYSQL_DATADIR=/var/lib/mysql -DDOWNLOAD_BOOST=1 -DWITH_BOOST=/opt/boost \
+    && cmake .. -DMYSQL_DATADIR=/var/lib/mysql -DDOWNLOAD_BOOST=ON -DWITH_BOOST=/opt/boost \
     && make VERBOSE=1 -j ${CPU} \
     && make DESTDIR=/opt/install install \
     && cd /opt/install \
